# mujoco-xml-generator

./: README.md  pyproject.toml
examples/example1/: example1.py
examples/simple/: main.py
mujoco-xml-generator/: compiler.py  interface.py  lengthrange.py
mujoco_xml_generator/: __init__.py  _utils.py  body.py  common.py  compiler.py  generator.py  interface.py  lengthrange.py  utils.py
mujoco_xml_generator/body/: __init__.py  body.py  camera.py  geom.py  joint.py
mujoco_xml_generator/compiler/: __init__.py  compiler.py  lengthrange.py
mujoco_xml_generator/default/: __init__.py  default.py  geom.py
mujoco_xml_generator/visual/: __init__.py  global_.py  visual.py
tests/: default.py  test_body.py  test_generator.py  test_geom.py  test_joint.py  test_lengthrange.py  test_utils.py  test_visual_with_global.py
