[tool.poetry]
name = "mujoco-xml-generator"
version = "0.1.0"
description = ""
authors = ["MasashiSUZUKI <masashi.lateolabrax@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
mujoco = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
